# PyBayesElo

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.cc  test.py
BayesElo/: CBradleyTerry.cpp  CDistribution.h  str.h  version.cpp
